RESOLVED FIXED134401
[Mac] AVMetadataKeySpaceISOUserData not defined on 10.8
https://bugs.webkit.org/show_bug.cgi?id=134401
Summary [Mac] AVMetadataKeySpaceISOUserData not defined on 10.8
Eric Carlson
Reported 2014-06-27 10:13:12 PDT
Use SOFT_LINK_POINTER_OPTIONAL so we don't ASSERT when the symbol isn't found.
Attachments
Proposed patch. (2.20 KB, patch)
2014-06-27 11:14 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2014-06-27 10:13:24 PDT
Eric Carlson
Comment 2 2014-06-27 11:14:32 PDT
Created attachment 234000 [details] Proposed patch.
Jer Noble
Comment 3 2014-06-27 11:31:20 PDT
Comment on attachment 234000 [details] Proposed patch. r=me.
WebKit Commit Bot
Comment 4 2014-06-27 12:18:14 PDT
Comment on attachment 234000 [details] Proposed patch. Clearing flags on attachment: 234000 Committed r170545: <http://trac.webkit.org/changeset/170545>
WebKit Commit Bot
Comment 5 2014-06-27 12:18:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.