[Mac] AVMetadataKeySpaceISOUserData not defined on 10.8 https://bugs.webkit.org/show_bug.cgi?id=134401

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::metadataType): Use SOFT_LINK_POINTER_OPTIONAL for AVMetadataKeySpaceISOUserData
    so we don't have problems on OS versions where it isn't defined.


Canonical link: https://commits.webkit.org/152385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170545 268f45cc-cd09-0410-ab3c-d52691b4dbfc